--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -63,8 +63,8 @@ ComboLabelOnCommand=x,0;y,23;shadowlength,1;zoom,0.75;align,0,1
 MissLabelOnCommand=x,0;y,23;shadowlength,1;zoom,0.75;align,0,1
 
 [HoldJudgment]
-HoldJudgmentLetGoCommand=IsGame("Pump") and visible,false or finishtweening;visible,true;shadowlength,0;diffusealpha,1;zoom,1;linear,0.8;zoom,0.75;sleep,0.5;linear,0.1;diffusealpha,0
-HoldJudgmentHeldCommand=IsGame("Pump") and visible,false or finishtweening;visible,true;shadowlength,0;diffusealpha,1;zoom,1;linear,0.3;zoom,0.75;sleep,0.5;linear,0.1;diffusealpha,0
+HoldJudgmentLetGoCommand=finishtweening;visible,true;shadowlength,0;diffusealpha,1;zoom,1;linear,0.8;zoom,0.75;sleep,0.5;linear,0.1;diffusealpha,0
+HoldJudgmentHeldCommand=finishtweening;visible,true;shadowlength,0;diffusealpha,1;zoom,1;linear,0.3;zoom,0.75;sleep,0.5;linear,0.1;diffusealpha,0
 
 [HelpDisplay]
 TipShowTime=7
