--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1138,8 +1138,9 @@ AttackDisplayXOffsetOneSideP2=0
 AttackDisplayXOffsetBothSides=0
 AttackDisplayY=-70
 AttackDisplayYReverse=70
-HoldJudgmentYStandard=-90
-HoldJudgmentYReverse=90
+; HACK: These shouldn't go to the render pipe at all if IsGame("pump")
+HoldJudgmentYStandard=IsGame("pump") and -99999 or -90
+HoldJudgmentYReverse=IsGame("pump") and -99999 or 90
 BrightGhostComboThreshold=100
 DrawDistanceBeforeTargetsPixels=SCREEN_HEIGHT
 DrawDistanceAfterTargetsPixels=-128
