--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -656,8 +656,8 @@ LifePercentChangeW4=0.000
 LifePercentChangeW5=-0.040
 LifePercentChangeMiss=-0.080
 LifePercentChangeHitMine=-0.160
-LifePercentChangeHeld=IsGame("Pump") and 0.000 or 0.008
-LifePercentChangeLetGo=IsGame("Pump") and 0.000 or -0.080
+LifePercentChangeHeld=0.008
+LifePercentChangeLetGo=-0.080
 LifePercentChangeCheckpointMiss=-0.080
 LifePercentChangeCheckpointHit=0.008
 
@@ -1347,9 +1347,9 @@ FrameOverP2OnCommand=
 FrameOverP2OffCommand=
 
 [ScoreKeeperNormal]
-PercentScoreWeightCheckpointHit=3
+PercentScoreWeightCheckpointHit=0
 PercentScoreWeightCheckpointMiss=0
-PercentScoreWeightHeld=IsGame("Pump") and 0 or 3
+PercentScoreWeightHeld=3
 PercentScoreWeightHitMine=-2
 PercentScoreWeightLetGo=0
 PercentScoreWeightMiss=0
@@ -1358,9 +1358,9 @@ PercentScoreWeightW2=2
 PercentScoreWeightW3=1
 PercentScoreWeightW4=0
 PercentScoreWeightW5=0
-GradeWeightCheckpointHit=2
-GradeWeightCheckpointMiss=-8
-GradeWeightHeld=IsGame("Pump") and 0 or 6
+GradeWeightCheckpointHit=0
+GradeWeightCheckpointMiss=0
+GradeWeightHeld=6
 GradeWeightHitMine=-8
 GradeWeightLetGo=0
 GradeWeightMiss=-8
