--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -656,8 +656,8 @@ LifePercentChangeW4=0.000
 LifePercentChangeW5=-0.040
 LifePercentChangeMiss=-0.080
 LifePercentChangeHitMine=-0.160
-LifePercentChangeHeld=0.008
-LifePercentChangeLetGo=-0.080
+LifePercentChangeHeld=IsGame("Pump") and 0.000 or 0.008
+LifePercentChangeLetGo=IsGame("Pump") and 0.000 or -0.080
 LifePercentChangeCheckpointMiss=-0.080
 LifePercentChangeCheckpointHit=0.008
 
@@ -1345,6 +1345,30 @@ FrameOverP2X=
 FrameOverP2Y=
 FrameOverP2OnCommand=
 FrameOverP2OffCommand=
+
+[ScoreKeeperNormal]
+PercentScoreWeightCheckpointHit=3
+PercentScoreWeightCheckpointMiss=0
+PercentScoreWeightHeld=IsGame("Pump") and 0 or 3
+PercentScoreWeightHitMine=-2
+PercentScoreWeightLetGo=0
+PercentScoreWeightMiss=0
+PercentScoreWeightW1=3
+PercentScoreWeightW2=2
+PercentScoreWeightW3=1
+PercentScoreWeightW4=0
+PercentScoreWeightW5=0
+GradeWeightCheckpointHit=2
+GradeWeightCheckpointMiss=-8
+GradeWeightHeld=IsGame("Pump") and 0 or 6
+GradeWeightHitMine=-8
+GradeWeightLetGo=0
+GradeWeightMiss=-8
+GradeWeightW1=2
+GradeWeightW2=2
+GradeWeightW3=1
+GradeWeightW4=0
+GradeWeightW5=-4
 
 [ScoreKeeperRave]
 AttackDurationSeconds=3.0
