Don't rename EVERY difficulty of halfdouble. That's just silly. Medium is the one people actually use.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -475,7 +475,7 @@ SortLevel5Color=color("0,1,0,1")
 # something else. Mostly for custom games and game emulation, PIU for example.
 
 #Names="PumpHard,PumpFreestyle,PumpNightmare"
-Names="PumpHard,PumpFreestyle,PumpNightmare,PumpHalfDoubleEasy,PumpHalfDoubleMedium,PumpHalfDoubleHard,PumpHalfDoubleExpert"
+Names="PumpHard,PumpFreestyle,PumpNightmare,PumpHalfDoubleMedium"
 # Dance Couple Beginner
 DanceCoupleBeginnerStepsType="StepsType_Dance_Couple"
 DanceCoupleBeginnerDifficulty="Difficulty_Beginner"
@@ -516,26 +516,11 @@ PumpNightmareStepsType="StepsType_Pump_Double"
 PumpNightmareDifficulty="Difficulty_Hard"
 PumpNightmareCourseType=nil
 PumpNightmareString="Nightmare"
-# Pump Half-Double Easy
-PumpHalfDoubleEasyStepsType="StepsType_Pump_Halfdouble"
-PumpHalfDoubleEasyDifficulty="Difficulty_Easy"
-PumpHalfDoubleEasyCourseType=nil
-PumpHalfDoubleEasyString="HalfDoubleEasy"
 # Pump Half-Double Medium
 PumpHalfDoubleMediumStepsType="StepsType_Pump_Halfdouble"
 PumpHalfDoubleMediumDifficulty="Difficulty_Medium"
 PumpHalfDoubleMediumCourseType=nil
-PumpHalfDoubleMediumString="HalfDoubleMedium"
-# Pump Half-Double Hard
-PumpHalfDoubleHardStepsType="StepsType_Pump_Halfdouble"
-PumpHalfDoubleHardDifficulty="Difficulty_Hard"
-PumpHalfDoubleHardCourseType=nil
-PumpHalfDoubleHardString="HalfDoubleHard"
-# Pump Half-Double Expert
-PumpHalfDoubleExpertStepsType="StepsType_Pump_Halfdouble"
-PumpHalfDoubleExpertDifficulty="Difficulty_Expert"
-PumpHalfDoubleExpertCourseType=nil
-PumpHalfDoubleExpertString="HalfDoubleExpert"
+PumpHalfDoubleMediumString="HalfDouble"
 #
 # Difficulty_Beginner-StepsType_Pump_Single=Easy
 # Difficulty_Easy-StepsType_Pump_Single=Normal
