--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,7 @@ Screenshots/
 portable.ini
 *.sublime-project
 *.sublime-workspace
+*.xcuserstate
+*.xcsettings
+*.xcscheme
+xcschememanagement.plist
