Fix GhostArrowDim::HitMineCommand in dance default noteskin

--- a/NoteSkins/dance/default/metrics.ini
+++ b/NoteSkins/dance/default/metrics.ini
@@ -39,7 +39,7 @@ HoldHeadNoteColorTextureCoordSpacingY=.125
 [GhostArrowDim]
 InitCommand=
 NoneCommand=
-HitMineCommand=finishtweening;blend,'BlendMode_Add';diffuse,color("1,1,1,1;zoom,1;rotationz,0;decelerate,.3;rotationz,90;linear,.3;rotationz,180;diffusealpha,0
+HitMineCommand=finishtweening;blend,'BlendMode_Add';diffuse,color("1,1,1,1");zoom,1;rotationz,0;decelerate,.3;rotationz,90;linear,.3;rotationz,180;diffusealpha,0
 MissCommand=
 W5Command=finishtweening;diffuse,color("1,.5,1,1");sleep,.1;decelerate,.5;diffusealpha,0
 W4Command=finishtweening;diffuse,color(".5,1,1,1");sleep,.1;decelerate,.5;diffusealpha,0
