--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -405,6 +405,7 @@ LabelOnCommand=x,6;y,22.5;shadowlength,1;zoom,0.75;diffusebottomedge,color("0.75
 
 [HoldJudgment]
 # System Direction
+HoldJudgmentMissedHoldCommand=
 HoldJudgmentLetGoCommand=finishtweening;visible,true;shadowlength,0;diffusealpha,1;zoom,1;y,-10;linear,0.8;y,10;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0
 HoldJudgmentHeldCommand=finishtweening;visible,true;shadowlength,0;diffusealpha,1;zoom,1.25;linear,0.3;zoomx,1;zoomy,1;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0
 
@@ -643,6 +644,7 @@ LifePercentChangeMiss=-0.080
 LifePercentChangeHitMine=-0.160
 LifePercentChangeHeld=IsGame("Pump") and 0.000 or 0.008
 LifePercentChangeLetGo=IsGame("Pump") and 0.000 or -0.080
+LifePercentChangeMissedHold=0.000
 LifePercentChangeCheckpointMiss=-0.080
 LifePercentChangeCheckpointHit=0.008
 
@@ -1239,6 +1241,7 @@ DeltaSecondsW2Command=
 DeltaSecondsW1Command=
 DeltaSecondsLetGoCommand=
 DeltaSecondsHeldCommand=
+DeltaSecondsMissedHoldCommand=
 DeltaSecondsGainLifeCommand=
 
 [ScoreDisplayPercentage Percent]
@@ -1336,6 +1339,7 @@ PercentScoreWeightCheckpointHit=3
 PercentScoreWeightCheckpointMiss=0
 PercentScoreWeightHeld=IsGame("Pump") and 0 or 3
 PercentScoreWeightHitMine=-2
+PercentScoreWeightMissedHold=0
 PercentScoreWeightLetGo=0
 PercentScoreWeightMiss=0
 PercentScoreWeightW1=3
@@ -1347,6 +1351,7 @@ GradeWeightCheckpointHit=2
 GradeWeightCheckpointMiss=-8
 GradeWeightHeld=IsGame("Pump") and 0 or 6
 GradeWeightHitMine=-8
+GradeWeightMissedHold=0
 GradeWeightLetGo=0
 GradeWeightMiss=-8
 GradeWeightW1=2
